Revert "Fixed ES5 numbers code alignment"
This reverts commit c061eac81fbd55ba96195dbb34c4316da58db299.

--- a/src/_modules/o-demo/o-demo.scss
+++ b/src/_modules/o-demo/o-demo.scss
@@ -97,7 +97,7 @@
 		}
 
 		code {
-			margin-top: -2.2rem;
+			margin-top: -23px;
 		}
 	}
 
@@ -109,10 +109,6 @@
 			&::before {
 				display: none;
 			}
-		}
-
-		code {
-			margin-top: -4.5rem;
 		}
 	}
 
